[metadata]
name = python-lvis
description = Easy to use redis queue
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://thorgate.eu
author = Thorgate
author_email = info@thorgate.eu
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2

[options]
include_package_data = true
packages = find:
python_requires = >=2.7
install_requires =
    requests
    django

[wheel]
universal = 1

[flake8]
max-line-length = 120
